.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:23:48 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:25:38 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
..\src\Clase08bis.c: In function 'myStrCpy':
..\src\Clase08bis.c:54:6: warning: type of 'cadena' defaults to 'int' [-Wimplicit-int]
   54 | void myStrCpy (cadena,cadena) //
      |      ^~~~~~~~
..\src\Clase08bis.c:54:6: error: multiple parameters named 'cadena'
..\src\Clase08bis.c:56: error: expected '{' at end of input
   56 | 
      | 
21:25:44 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:29:16 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:30:33 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
..\src\Clase08bis.c: In function 'myStrCpy':
..\src\Clase08bis.c:69:5: warning: assignment to 'char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
   69 |  aux=cadenaDos;
      |     ^
..\src\Clase08bis.c:71:11: warning: assignment to 'char *' from 'char' makes pointer from integer without a cast [-Wint-conversion]
   71 |  cadenaUno=aux;
      |           ^
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
21:31:19 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
..\src\Clase08bis.c:65:6: error: conflicting types for 'myStrCpy'
   65 | void myStrCpy (char *cadenaUno[],char* cadenaDos[])
      |      ^~~~~~~~
..\src\Clase08bis.c:17:6: note: previous declaration of 'myStrCpy' was here
   17 | void myStrCpy (char cadenaUno[],char cadenaDos[]);
      |      ^~~~~~~~
..\src\Clase08bis.c: In function 'myStrCpy':
..\src\Clase08bis.c:69:5: warning: assignment to 'char' from 'char **' makes integer from pointer without a cast [-Wint-conversion]
   69 |  aux=cadenaDos;
      |     ^
..\src\Clase08bis.c:71:11: warning: assignment to 'char **' from 'char' makes pointer from integer without a cast [-Wint-conversion]
   71 |  cadenaUno=aux;
      |           ^
21:33:14 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
..\src\Clase08bis.c: In function 'main':
..\src\Clase08bis.c:33:2: warning: implicit declaration of function 'myStrCpy' [-Wimplicit-function-declaration]
   33 |  myStrCpy(cadenaUno,cadenaDos);
      |  ^~~~~~~~
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: src\Clase08bis.o: in function `main':
C:\Users\Nacho\Desktop\Programacion\UTN\ProgramacionUno\Clase08bis\Debug/../src/Clase08bis.c:33: undefined reference to `myStrCpy'
collect2.exe: error: ld returned 1 exit status
21:33:25 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:34:20 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
..\src\Clase08bis.c: In function 'myPuts':
..\src\Clase08bis.c:62:6: warning: unused variable 'contador' [-Wunused-variable]
   62 |  int contador;
      |      ^~~~~~~~
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:34:47 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:34:59 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:40:07 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:40:17 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:46:14 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:50:42 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:51:14 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:51:58 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
c:/mingw/bin/../lib/gcc/mingw32/9.2.0/../../../../mingw32/bin/ld.exe: cannot open output file Clase08bis.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
21:52:00 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
Info: Nothing to build for Clase08bis
21:53:02 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:54:20 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:58:08 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
..\src\Clase08bis.c: In function 'main':
..\src\Clase08bis.c:24:7: warning: unused variable 'cadenaDos' [-Wunused-variable]
   24 |  char cadenaDos[20]= "Holaaaaaa";
      |       ^~~~~~~~~
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
21:58:25 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
..\src\Clase08bis.c: In function 'main':
..\src\Clase08bis.c:24:7: warning: unused variable 'cadenaDos' [-Wunused-variable]
   24 |  char cadenaDos[20]= "Holaaaaaa";
      |       ^~~~~~~~~
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
21:58:44 **** Incremental Build of configuration Debug for project Clase08bis ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clase08bis.o" "..\\src\\Clase08bis.c" 
gcc -o Clase08bis.exe "src\\Clase08bis.o" 
Info: Nothing to build for Clase08bis
